--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import url('./Styles/Business.css');
+@import url('./Styles/BusinessList.css');
+@import url('./Styles/App.css');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
